# FON.swift

./: .gitignore  .gitmodules  Package.swift  README.md
.github/workflows/: ci.yml  release.yml
Sources/CFonNative/: module.modulemap
Sources/CFonNative/include/: fon.h
Sources/FON/: FON.swift
Tests/FONTests/: FONTests.swift
native/: Cargo.toml
native/src/: lib.rs
