[package]
name = "fon_native"
version = "0.3.0"
edition = "2021"
publish = false

[lib]
name = "fon_native"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
fon = { package = "FastObjectNotation", path = "fon-rust" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
